# fast-mongo

./: .env.sample  README.md  docker-compose.yaml  pyproject.toml
server/: main.py
server/config/environments/: base.py  development.py  production.py  staging.py
server/database/: database-collection-mapper.json  manager.py  user.py
server/models/: base.py  token.py  user.py
server/models/database/: user.py
server/models/helpers/: base.py  token.py  user.py
server/models/request/: user.py
server/models/response/: user.py
server/routes/: auth.py  user.py
server/security/: dependencies.py  hash.py  password.py  token.py
server/services/: email.py  exceptions.py  formatters.py  messages.py  validators.py
