[tool.poetry]
name = "fast-mongo"
version = "0.1.0"
description = "A REST API built with fastapi and MongoDB"
authors = ["rifatrakib <Rakib.1508@outlook.com>"]
license = "Apache License Version 2.0"
readme = "README.md"
packages = [{include = "fast_mongo"}]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.2.1"
coverage = "^7.1.0"
ruff = "^0.0.246"
python-decouple = "^3.7"
pydash = "^6.0.0"
elastic-apm = "^6.14.0"
psutil = "^5.9.4"
fastapi = {extras = ["all"], version = "^0.91.0"}
beanie = "^1.17.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
argon2-cffi = "^21.3.0"
fastapi-mail = "^1.2.5"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.4"
black = "^23.1.0"
flake8 = "^6.0.0"
isort = "^5.12.0"

[tool.black]
line-length = 140
include = '\.pyi?$'
exclude = '''
/(
  \.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
)/
'''

[tool.flake8]
max-line-length = 140
exclude = [".git", "__pycache__", "dist"]
max-complexity = 10

[tool.isort]
atomic = true
profile = "black"
line_length = 140
skip_gitignore = true

[tool.ruff]
line-length = 140
exclude = [".git", "__pycache__", "dist"]
target-version = "py39"
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.mccabe]
max-complexity = 10

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
